--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "promo server",
+  "name": "promo-server",
   "version": "1.0.0",
   "description": "the main promo server for PSM",
   "main": "server/boot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,9 @@
     "path": "^0.12.7",
     "rxjs": "^5.4.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
+  }
 }
