--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "the main promo server for PSM",
   "main": "server/boot.js",
   "scripts": {
-    "test": "mocha --recursive"
+    "test": "mocha --recursive",
+    "test-coverage": "istanbul cover node_modules/.bin/_mocha -- test/**/*"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^4.0.2",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
     "supertest": "^3.0.0"
   }
